Add comments and split up in different sections.

--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -27,6 +27,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set start values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -34,19 +41,19 @@
    },
    "outputs": [],
    "source": [
-    "num_firm = 5\n",
-    "time_horizon = 1\n",
-    "num_market_events = round(1.1*time_horizon)\n",
-    "mean_betw_customer_arrival = 2\n",
-    "prices = np.arange(0,15.1,0.2)   # values used for paper: (np.arange(0,15.1,0.1))\n",
-    "watched_firm = 0\n",
-    "num_sims = 100  # value used for paper: 10000\n",
-    "num_market_situations = 10   # value used for paper: 40\n",
-    "m = 2\n",
-    "num_customer_events = 4\n",
-    "reaction_time_firm = time_horizon\n",
-    "strategies = [\"S1\",\"S2\",\"S3\"]\n",
-    "random.seed(12530586)"
+    "num_firm = 5                                   # the number of firms which we simulate\n",
+    "time_horizon = 1                               # set the time horizon which we watch to 1 \n",
+    "num_market_events = 2                          # the max price adjustments each firm will make\n",
+    "mean_betw_customer_arrival = 2                 # chose mean for how often customers appear\n",
+    "prices = np.arange(0,15.1,0.2)                 # values used for paper: (np.arange(0,15.1,0.1))\n",
+    "watched_firm = 0                            \n",
+    "num_sims = 100                                 # the number of simulations, value used for paper: 10000 \n",
+    "num_market_situations = 10                     # the number of market situations with different start scenarios, \n",
+    "                                               # value used for paper: 40\n",
+    "num_customer_events = 4                        # the maximum number of customers\n",
+    "reaction_time_firm = time_horizon              # watched firm doesn't update price in time horizon\n",
+    "setups = [\"S1\",\"S2\",\"S3\"]                      # set the name of the setups from the paper\n",
+    "random.seed(12530586)                          # set a random seed to always get comparable results"
    ]
   },
   {
@@ -85,9 +92,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Create the features for each starting situation from each market situation and save them as a file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prices_firm_pred = np.round(np.random.uniform(6, 16, size=(num_firm, num_market_situations)), decimals = 2)\n",
@@ -209,12 +225,19 @@
    },
    "outputs": [],
    "source": [
-    "def calc_prices(prices_firm_adjust, adjusting_firm, strategy):\n",
+    "def calc_prices(prices_firm_adjust, adjusting_firm, setup):\n",
     "    prices_firm_adjust = np.array(prices_firm_adjust)\n",
+    "    #weird indexing because there are actually no price adjustments at time 0 nor on the price horizon\n",
     "    for i in range(1,len(prices_firm_adjust)-1):        \n",
-    "        prices_firm_adjust[i:,adjusting_firm[i]] = strategy[str(adjusting_firm[i])](prices_firm_adjust[i-1],adjusting_firm[i])\n",
-    "    prices_firm_adjust[len(prices_firm_adjust)-1] = prices_firm_adjust[len(prices_firm_adjust)-2]\n",
+    "        prices_firm_adjust[i:,adjusting_firm[i]] = setup[str(adjusting_firm[i])](prices_firm_adjust[i-1],adjusting_firm[i])\n",
     "    return prices_firm_adjust"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate all the necessary information for when firms adjusts their prices and how often they adjust their prices.  "
    ]
   },
   {
@@ -223,17 +246,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_betw_market_events_firm = np.random.uniform(0.8, 1.2, size = (len(prices), num_market_situations, num_sims, num_firm, m))\n",
+    "time_betw_market_events_firm = np.random.uniform(0.8, 1.2, size = (len(prices), num_market_situations, num_sims, num_firm, num_market_events))\n",
     "\n",
     "time_adjusts_firm = time_betw_market_events_firm\n",
     "\n",
     "time_adjusts_firm[:, :, :, :, 0] = np.random.uniform(0, 1, size = (len(prices), num_market_situations, num_sims, num_firm))\n",
     "\n",
+    "# calculate the time when each company adjusts their prices\n",
     "for p in range(len(prices)):\n",
     "    for w in range(num_market_situations):\n",
     "        for sim_num in range(num_sims):\n",
     "            for c in range(num_firm):\n",
-    "                for i in range(1,m):\n",
+    "                for i in range(1,num_market_events):\n",
     "                    time_adjusts_firm[p,w,sim_num,c,i] = time_adjusts_firm[p,w,sim_num,c,i-1] + time_betw_market_events_firm[p,w,sim_num,c,i]  \n",
     "\n",
     "price_adjusts_before_horizon = np.array(\n",
@@ -248,7 +272,7 @@
     "\n",
     "price_adjusts_before_horizon = np.array(\n",
     "    [[[\n",
-    "                sorted(price_adjusts_before_horizon[p,w,sim_num])+[time_horizon] \n",
+    "                [0] + sorted(price_adjusts_before_horizon[p,w,sim_num]) + [time_horizon] \n",
     "                for sim_num in range(num_sims)]\n",
     "            for w in range(num_market_situations)]\n",
     "        for p in range(len(prices))])\n",
@@ -256,16 +280,6 @@
     "num_price_adjusts_before_horizon = np.array(\n",
     "    [[[\n",
     "                len(price_adjusts_before_horizon[p,w,sim_num]) \n",
-    "                for sim_num in range(num_sims)]\n",
-    "            for w in range(num_market_situations)]\n",
-    "        for p in range(len(prices))])\n",
-    "\n",
-    "time_market_events = np.array(\n",
-    "    [[[[\n",
-    "                    0 \n",
-    "                    if i==0 \n",
-    "                    else price_adjusts_before_horizon[p,w,sim_num][i-1] \n",
-    "                    for i in range(num_price_adjusts_before_horizon[p,w,sim_num]+1)]\n",
     "                for sim_num in range(num_sims)]\n",
     "            for w in range(num_market_situations)]\n",
     "        for p in range(len(prices))])\n",
@@ -278,12 +292,29 @@
     "                    for i in range(num_price_adjusts_before_horizon[p,w,sim_num])] \n",
     "                for sim_num in range(num_sims)]\n",
     "            for w in range(num_market_situations)]\n",
-    "        for p in range(len(prices))])\n",
-    "\n",
+    "        for p in range(len(prices))])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate when customers will arrive and how they will score the quality and rating of all firms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "time_betw_customer_events = mean_betw_customer_arrival * np.random.exponential(size = (len(prices), num_market_situations, num_sims, num_customer_events))\n",
     "\n",
     "time_customer_events = time_betw_customer_events\n",
     "\n",
+    "#calculate the arrival of customers after the first one\n",
     "for p in range(len(prices)):\n",
     "    for w in range(num_market_situations):\n",
     "        for sim_num in range(num_sims):\n",
@@ -293,7 +324,8 @@
     "rand_customer_score_qual = np.random.uniform(0, 1, size = (len(prices), num_market_situations ,num_sims, num_customer_events))\n",
     "\n",
     "rand_customer_score_rating = np.random.uniform(0, 0.5, size = (len(prices), num_market_situations ,num_sims, num_customer_events))\n",
-    "                         \n",
+    "\n",
+    "#calculate the score from each customer for each firm based on quality and rating of the offers\n",
     "customer_score_qual_rating = np.array(\n",
     "    [[[[[\n",
     "                        (rand_customer_score_qual[p,w,s][c]*qual_firm_pred[k,w] +\n",
@@ -302,8 +334,24 @@
     "                    for c in range(num_customer_events)] \n",
     "                for s in range(num_sims)]\n",
     "            for w in range(num_market_situations)]\n",
-    "        for p in range(len(prices))])\n",
-    "\n",
+    "        for p in range(len(prices))])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate the prices adjustments for each firm in the time horizon."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "prices_firm = np.array(\n",
     "    [[[\n",
     "                prices_firm_pred[k,w] \n",
@@ -324,89 +372,143 @@
     "\n",
     "prices_firm_adjust = np.array(\n",
     "    [[[[\n",
-    "                    np.array(calc_prices(prices_firm_adjust[a,w,s], adjusting_firm[a,w,s], globals()[\"s{}\".format(strat+1)])) \n",
+    "                    np.array(calc_prices(prices_firm_adjust[a,w,s], adjusting_firm[a,w,s], globals()[\"s{}\".format(setup+1)])) \n",
     "                    for s in range(num_sims)] \n",
     "                for w in range(num_market_situations)] \n",
     "            for a in range(len(prices))]\n",
-    "        for strat in range(len(strategies))])\n",
-    "\n",
+    "        for setup in range(len(setups))])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we don't want to know what happens after or on the time horizon, we will always substract 1 when using the value num_price_adjusts_before_horizon in the following code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# get all the customers that appear between market events, so we don't always have to iterate through each customer\n",
     "gen = np.array(\n",
     "    [[[[[\n",
     "                        x \n",
     "                        for x in range(num_customer_events) \n",
-    "                        if time_market_events[a,w,s][i]< time_customer_events[a,w,s][x]< time_market_events[a,w,s][i+1]] \n",
-    "                    for i in range(num_price_adjusts_before_horizon[a,w,s])] \n",
+    "                        if price_adjusts_before_horizon[a,w,s][i]< time_customer_events[a,w,s][x]< price_adjusts_before_horizon[a,w,s][i+1]] \n",
+    "                    for i in range(num_price_adjusts_before_horizon[a,w,s] - 1)] \n",
     "                for s in range(num_sims)] \n",
     "            for w in range(num_market_situations)] \n",
-    "        for a in range(len(prices))])\n",
-    "\n",
+    "        for a in range(len(prices))])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simulate the customer by completing the score using the current prices of each firm and then calculating a decision for each customer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "rand_customer_score = np.array(\n",
     "    [[[[[[[\n",
-    "                                (prices_firm_adjust[strat,a,w,s][i,k] + customer_score_qual_rating[a,w,s,c,k]) \n",
+    "                                (prices_firm_adjust[setup,a,w,s][i,k] + customer_score_qual_rating[a,w,s,c,k]) \n",
     "                                for k in range(num_firm)]\n",
     "                            for c in gen[a,w,s][i]]\n",
-    "                        for i in range(num_price_adjusts_before_horizon[a,w,s])] \n",
+    "                        for i in range(num_price_adjusts_before_horizon[a,w,s] - 1)] \n",
     "                    for s in range(num_sims)] \n",
     "                for w in range(num_market_situations)] \n",
     "            for a in range(len(prices))]\n",
-    "        for strat in range(len(strategies))])\n",
+    "        for setup in range(len(setups))])\n",
     "\n",
     "rand_customer_decision = np.array(\n",
     "    [[[[[[\n",
-    "                            np.argmin(rand_customer_score[strat,a,w,s][i][c]) \n",
-    "                            if min(rand_customer_score[strat,a,w,s][i][c])< random.uniform(5,15) \n",
+    "                            np.argmin(rand_customer_score[setup,a,w,s][i][c]) \n",
+    "                            if min(rand_customer_score[setup,a,w,s][i][c])< random.uniform(5,15) \n",
     "                            else -1 \n",
     "                            for c in range(len(gen[a,w,s][i]))]\n",
-    "                        for i in range(num_price_adjusts_before_horizon[a,w,s])] \n",
+    "                        for i in range(num_price_adjusts_before_horizon[a,w,s] - 1)] \n",
     "                    for s in range(num_sims)] \n",
     "                for w in range(num_market_situations)] \n",
     "            for a in range(len(prices))]\n",
-    "        for strat in range(len(strategies))])\n",
-    "\n",
+    "        for setup in range(len(setups))])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate different metrics and save them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# count how often a firm sold anything in each simulation\n",
     "As = np.array(\n",
     "    [[[[[\n",
-    "                        np.count_nonzero(np.hstack(rand_customer_decision[strat,a,w,s])== k) \n",
+    "                        np.count_nonzero(np.hstack(rand_customer_decision[setup,a,w,s])== k) \n",
     "                        for k in range(num_firm)]\n",
     "                    for s in range(num_sims)] \n",
     "                for w in range(num_market_situations)] \n",
     "            for a in range(len(prices))]\n",
-    "        for strat in range(len(strategies))])\n",
+    "        for setup in range(len(setups))])\n",
     "\n",
+    "# count how often a firm sold a certain something a certain number of times in all the simulations \n",
     "A = np.array(\n",
     "    [[[[[\n",
-    "                        1/num_sims*np.count_nonzero(As[strat,a,w,:,k]==x) \n",
+    "                        1/num_sims*np.count_nonzero(As[setup,a,w,:,k]==x) \n",
     "                        for k in range(num_firm)]\n",
     "                    for x in range(6)]\n",
     "                for w in range(num_market_situations)] \n",
     "            for a in range(len(prices))]\n",
-    "        for strat in range(len(strategies))])\n",
+    "        for setup in range(len(setups))])\n",
     "\n",
+    "# probability that the watched firm sold something\n",
     "P_ori = [[[\n",
-    "            1- A[strat,a,w,0,watched_firm]\n",
+    "            1- A[setup,a,w,0,watched_firm]\n",
     "            for w in range(num_market_situations)] \n",
     "        for a in range(len(prices))]\n",
-    "    for strat in range(len(strategies))]\n",
+    "    for setup in range(len(setups))]\n",
     "\n",
+    "# probability that the watched firm sold more than 2 articles\n",
     "P_ori2 = [[[\n",
     "            sum([\n",
-    "                A[strat,a,w,x,watched_firm]\n",
+    "                A[setup,a,w,x,watched_firm]\n",
     "                for x in range(2,6)])\n",
     "            for w in range(num_market_situations)] \n",
     "        for a in range(len(prices))]\n",
-    "    for strat in range(len(strategies))]\n",
+    "    for setup in range(len(setups))]\n",
     "\n",
+    "# the estimated profit\n",
     "EW_ori = [[[\n",
-    "            prices[a]*P_ori[strat][a][w] \n",
+    "            prices[a]*P_ori[setup][a][w] \n",
     "            for w in range(num_market_situations)]\n",
     "        for a in range(len(prices))]\n",
-    "    for strat in range(len(strategies))]\n",
+    "    for setup in range(len(setups))]\n",
     "\n",
-    "for strat in range(len(strategies)):\n",
-    "    with open('PEW_comparison_{}.csv'.format(strategies[strat]), 'w') as file:\n",
+    "for setup in range(len(setups)):\n",
+    "    with open('PEW_comparison_{}.csv'.format(setups[setup]), 'w') as file:\n",
     "        writer = csv.writer(file, delimiter='\\t')\n",
     "        for w in range(num_market_situations):\n",
     "            for a in range(len(prices)):\n",
-    "                line = [w+1,prices[a],P_ori[strat][a][w], P_ori2[strat][a][w], EW_ori[strat][a][w]]\n",
+    "                line = [w+1,prices[a],P_ori[setup][a][w], P_ori2[setup][a][w], EW_ori[setup][a][w]]\n",
     "                writer.writerow(line)"
    ]
   }
