Adapt paper plot do use type 1 fonts

--- a/demand_learning.ipynb
+++ b/demand_learning.ipynb
@@ -201,10 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from ggplot import *\n",
@@ -263,9 +268,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Values for null model: \n",
-      "\tAIC: 1102.5030490311206\n",
-      "\tLoglikelihood: -542.2515245155603\n"
+      "Null model: \n",
+      "\tAIC: 1,077.3495648963965\n",
+      "\tLoglikelihood: -529.6747824481982\n"
      ]
     },
     {
@@ -526,7 +531,7 @@
     "\n",
     "# determine null model\n",
     "aic_0, logl_0 = calc_null_model(learning_X, learning_Y)\n",
-    "print(\"Values for null model: \\n\\tAIC: {}\\n\\tLoglikelihood: {}\".format(aic_0, logl_0))\n",
+    "print(f\"Null model: \\n\\tAIC: {aic_0:,}\\n\\tLoglikelihood: {logl_0:,}\")\n",
     "\n",
     "res = learn()\n",
     "overview = res[0]\n",
@@ -1012,6 +1017,12 @@
     }
    ],
    "source": [
+    "import matplotlib\n",
+    "\n",
+    "# fixes problems with ACM's PreFlight compiler which complains about type 3 fonts\n",
+    "# see: http://phyletica.org/matplotlib-fonts/\n",
+    "matplotlib.rcParams['text.usetex'] = True\n",
+    "\n",
     "def plot_paper_graph__setting_comparison(situations):\n",
     "    f, axes = plt.subplots(1, len(situations), sharey=True)\n",
     "\n",
@@ -1057,7 +1068,6 @@
     "    f.savefig(\"dm__setting_comparison.pdf\", bbox_inches='tight')\n",
     "\n",
     "\n",
-    "\n",
     "# we select to exemplary situations, that nicely show the expected effects\n",
     "# of the settings and where no model is particularly good or bad.\n",
     "# For the paper, we selected situation 9 of setting (i) and 4 of (iii) \n",
@@ -1071,7 +1081,6 @@
     "probas_filt = res[1]\n",
     "selected_situations['(iii)'] = probas_filt[probas_filt.Situation == 4]\n",
     "\n",
-    "# plot_paper_graph__setting_comparison(probas_1_filtered, probas_2_filtered)\n",
     "plot_paper_graph__setting_comparison(selected_situations)"
    ]
   }
